2002-12-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* amplot/amplot.awk: Parse newer log lines.

2002-12-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/selfcheck.c: Typo.

2002-12-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c (output_stats): Typo.

2002-12-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c: Print an usage by tape.

2002-12-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapeio.c (do_read): Init count to 0.

2002-12-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/Makefile.am: Install tapetype program as amtapetype.
	* docs/TAPETYPES: Change for amtapetype.
	* man/amtapetype.8.in: New man page
	* man/Makefile.am: Install it.
	* configure.in (AC_CONFIG_FILES): Add man/amtapetype.8.

2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/ammt.c (optind): Add prototype.
	* tape-src/amdd.c (optind): Add prototype.

2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/arglist.h (printf_arglist_function,
	  printf_arglist_function1, printf_arglist_function2): Define if
	  STDC_HEADERS is not defined.

2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: New --date option to display datestamp.
	* server-src/amstatus.pl.in: Increase some field size.
	* server-src/amstatus.pl.in: The host field adjust it's length to the
	 largest.

2002-11-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amanda.h (days_diff): Don't add a half day.
	* server-src/amadmin.c: Fix for newer days_diff.
	* server-src/planner.c: Fix for newer days_diff.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/tapetype.c: Cast time_t to long for printing.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: Write a "amflush: start at ???" line.